[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar-layout"
version = "0.1.0"
description = "Constraint-driven lunar habitat layout generator and optimizer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Autonomous Habitat Architect AI"}]
dependencies = [
    "pydantic>=1.10,<2.0",
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
lunar-layout = "lunar_layout.cli:main"
